--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@varshithsoma/common-app": "^1.0.2",
     "hono": "^4.9.4",
     "prisma": "^6.15.0"
   },
